Dev 07 11 (#22)
* Cleaned up Http responses by creating subclass of HttpMessage -> HttpResponse which handles all http responses

* Reformatting code to clean it up

* Reformatting code to clean it up - Added tests and checked test coverage

* Refactoring more code in HttpServer - More functionality handled in controller Map

* closes #20, closes #8 - Program running stable with all tests running green - Merging stable version before making further issues-implementation